SimLang/src/test/resources/test/coco/invalid/EmptyModel.sim
/* (c) https://github.com/MontiCore/monticore */
sim EmptyModel {
  
}
